--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "mapbox-gl": "^2.14.1",
+    "prettier": "2.8.8",
+    "react-map-gl": "^7.0.23",
     "vite": "^4.3.2"
   }
 }
